# macgyvbot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  EXPLAIN.md  LogRule.md  README.md  REFACT.md  package.xml  requirements-graspnet.txt  requirements.txt  setup.cfg  setup.py
.codex/: instructions.md
calibration/: README.md  (+1 more)
src/macgyvbot_bringup/: README.md  package.xml  setup.py
src/macgyvbot_bringup/config/: moveit_py.yaml
src/macgyvbot_bringup/launch/: macgyvbot.launch.py  macgyvbot_compat.launch.py
src/macgyvbot_bringup/macgyvbot_bringup/: __init__.py  joint_velocity_config.py
src/macgyvbot_bringup/test/: test_flake8.py  test_joint_velocity_config.py  test_pep257.py
src/macgyvbot_command/: README.md  package.xml  setup.cfg  setup.py
src/macgyvbot_command/macgyvbot_command/: __init__.py  command_input_node.py
src/macgyvbot_command/macgyvbot_command/input_mapping/: command_hard_parser.py  command_llm_parser.py  command_vocabulary.py
src/macgyvbot_command/macgyvbot_command/stt/: __init__.py  speech_to_text.py
src/macgyvbot_command/macgyvbot_command/tts/: __init__.py  tts_service.py
src/macgyvbot_command/macgyvbot_command/ui/: __init__.py  voice_command_window.py
src/macgyvbot_command/test/: manual_command_llm_eval.py  test_command_input_tts_scope.py  test_short_control_action.py  test_wrench_command_vocabulary.py
src/macgyvbot_interfaces/: CMakeLists.txt  README.md  package.xml
src/macgyvbot_interfaces/msg/: CommandFeedback.msg  CommandShutdown.msg  CommandText.msg  HumanGraspResult.msg  RobotTaskControl.msg  RobotTaskStatus.msg  TaskRequest.msg  ToolCommand.msg  ToolDropEvent.msg  ToolMaskLock.msg
src/macgyvbot_interfaces/srv/: SAMYaw.srv  SetGripper.srv  VLMGrasp.srv
src/macgyvbot_monitor/: package.xml  setup.cfg  setup.py
src/macgyvbot_monitor/macgyvbot_monitor/: launch_monitor.py
src/macgyvbot_perception/: README.md  package.xml  setup.cfg  setup.py
src/macgyvbot_perception/data/: collect_vlm_grasp_dataset.py
src/macgyvbot_perception/macgyvbot_perception/: depth_projection.py  drawer_marker_resolver.py  hand_grasp_detection_node.py  model_paths.py  pick_target_resolver.py  sam_yaw_service_node.py  vlm_grasp_service_node.py  yolo_detector.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/: __init__.py  api_grasp_point_selector.py  api_vlm_grasp_point_selector.py  grasp_point_selector.py  mask_image_for_grasp_detection.py  vlm_grasp_point_selector.py  vlm_only_grasp_point_selector.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/api_method/: __init__.py  client.py  prompts.py  selector.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/center_method/: __init__.py  selector.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/grasp_method/: __init__.py  mask_pca_yaw.py  yaw_estimation.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/vlm/: __init__.py  inference_history_recode.py  models.py  parser.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/vlm_method/: __init__.py  grid.py  prompts.py  selector.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/vlm_only_method/: __init__.py  prompts.py  selector.py
src/macgyvbot_perception/macgyvbot_perception/grasp_point/yolo_method/: __init__.py  selector.py
src/macgyvbot_perception/macgyvbot_perception/hand_tool_grasp/: hand_center.py  hand_detector.py  ml_grasp_classifier.py  sam_tool_mask.py  tool_detector.py  visualization.py
src/macgyvbot_perception/test/: click_base_point.py  manual_vlm_only_camera_inference.py  manual_yolo_realsense_bbox.py  test_drawer_marker_resolver.py  test_hand_center.py  test_hand_grasp_ml_mask.py  test_inference_history_recode.py  test_mask_image_for_grasp_detection.py  test_pick_target_resolver.py  test_vlm_grid.py  test_vlm_inputs.py  test_vlm_parser.py  test_yaw_estimation.py  test_yolo_grasp_point_selector.py
src/macgyvbot_perception/train/: train_qwen_grasp_lora.py
src/macgyvbot_resources/: README.md  package.xml  setup.py
src/macgyvbot_resources/calibration/: README.md
src/macgyvbot_resources/calibration/tutorial/: README.md
src/macgyvbot_resources/macgyvbot_resources/: __init__.py  calibration.py  resources.py
src/macgyvbot_resources/urdf/: m0609_onrobot_rg2_combined.urdf
src/macgyvbot_resources/weights/: download_Qwen_3b_weights.py  download_Qwen_7b_weights.py  download_sam_weights.py  download_vlm_weights.py  test_yolo_realsense.py
src/macgyvbot_task/: README.md  package.xml  setup.cfg  setup.py
src/macgyvbot_task/macgyvbot_task/: __init__.py  macgyvbot_main_node.py  task_coordinator_node.py
src/macgyvbot_task/macgyvbot_task/application/: __init__.py  drawer_store_motion.py  logging_utils.py  tool_drop_coordinator.py
src/macgyvbot_task/macgyvbot_task/application/adapters/: hand_grasp_result_adapter.py  sam_yaw_service_client.py  vlm_grasp_service_client.py
src/macgyvbot_task/macgyvbot_task/application/commands/: tool_command_controller.py
src/macgyvbot_task/macgyvbot_task/application/display/: debug_display.py
src/macgyvbot_task/macgyvbot_task/application/drawer_flow/: drawer_sequence.py
src/macgyvbot_task/macgyvbot_task/application/pick_flow/: bring_sequence.py  pick_frame_processor.py  pick_grasp_flow.py  pick_handoff_flow.py  pick_sequence.py  pick_target_planner.py
src/macgyvbot_task/test/: test_drop_recovery.py  test_hand_grasp_result_adapter.py  test_macgyvbot_main_node_status.py  test_pick_handoff_recovery.py  test_pick_pregrasp_width_adjust.py  test_return_close_policy.py  test_return_drawer_store_flow.py  test_return_handoff_flow.py  test_return_home_placement_flow.py  test_return_target_resolver.py  test_robot_home_initializer.py  test_task_coordinator_cancel_cleanup.py
src/macgyvbot_ui/: README.md  package.xml  setup.cfg  setup.py
src/macgyvbot_ui/macgyvbot_ui/: __init__.py  event_chat.py  operator_ui_node.py  voice_command_window.py
src/macgyvbot_ui/test/: test_event_chat.py  test_gripper_panel_smoke.py  test_operator_ui_callback_contract.py  test_operator_ui_status_messages.py  test_voice_command_window_smoke.py
(+249 files in other folders)
