<?xml version="1.0"?>
<package format="3">
  <name>macgyvbot_command</name>
  <version>0.0.0</version>
  <description>Command parsing and command input adapters for MacGyvBot.</description>
  <maintainer email="todo@example.com">MacGyvBot Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>espeak-ng</exec_depend>
  <exec_depend>ffmpeg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
