<?xml version="1.0"?>
<package format="3">
  <name>macgyvbot_monitor</name>
  <version>0.0.0</version>
  <description>Launch log monitoring and Discord alerting for MacGyvBot.</description>
  <maintainer email="todo@example.com">MacGyvBot Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>macgyvbot_domain</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
