<?xml version="1.0"?>
<package format="3">
  <name>macgyvbot_resources</name>
  <version>0.0.0</version>
  <description>Shared calibration and model resource files for MacGyvBot packages.</description>
  <maintainer email="todo@example.com">MacGyvBot Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
