<?xml version="1.0"?>
<package format="3">
  <name>macgyvbot_task</name>
  <version>0.0.0</version>
  <description>Pick, return, and task orchestration workflows for MacGyvBot.</description>
  <maintainer email="todo@example.com">MacGyvBot Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>macgyvbot_config</exec_depend>
  <exec_depend>macgyvbot_domain</exec_depend>
  <exec_depend>macgyvbot_resources</exec_depend>
  <exec_depend>macgyvbot_perception</exec_depend>
  <exec_depend>macgyvbot_manipulation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
