<?xml version="1.0"?>
<package format="3">
  <name>macgyvbot_ui</name>
  <version>0.0.0</version>
  <description>Operator-facing UI adapters and GUI integration for MacGyvBot.</description>
  <maintainer email="todo@example.com">MacGyvBot Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>macgyvbot_config</exec_depend>
  <exec_depend>macgyvbot_domain</exec_depend>
  <exec_depend>macgyvbot_interfaces</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
